# juapreciptask

./: README.md
juapreciptrack/: .gitignore  .pre-commit-config.yaml  README.md  main.py  pyproject.toml
juapreciptrack/config/: config.py  settings.py
juapreciptrack/infrastructure/: ray_dask_init.py
juapreciptrack/notebooks/: STAC_TEST.ipynb  read_stac.ipynb  stac_flask_query_api.py
juapreciptrack/pipeline/: pipeline_manager.py
juapreciptrack/pipeline/tasks/: collect_task.py  kerchunk_reference.py  stac_integration.py  transform_task.py
juapreciptrack/tests/: test_collect_task.py  test_kerchunk_reference.py  test_pipeline_manager.py  test_ray_dask_init.py  test_stac_integration.py  test_transform_task.py
juapreciptrack/utils/: common.py  logging_config.py
