[tool.poetry]
name = "juapreciptrack"
version = "0.1.0"
description = "A geospatial data pipeline for processing and analyzing 2022 precipitation data using Dask and Ray"
authors = ["bikash"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.10"
dask = {extras = ["array", "diagnostics", "dataframe", "delayed", "bag", "pyarrow", "distributed"], version = "^2024.8.1"}
ray = {extras = ["default"], version = "^2.34.0"}
gcsfs = "^2024.6.1"
xarray = "^2024.7.0"
netcdf4 = "^1.7.1.post2"
h5netcdf = "^1.3.0"
h3 = "^3.7.7"
kerchunk = "^0.2.6"
pystac = "^1.10.1"
pyarrow = "^17.0.0"
scipy = "^1.14.1"
fastparquet = "^2024.5.0"
pandas = "^2.2.2"
bokeh = "^3.5.2"
structlog = "^24.4.0"


[tool.poetry.group.dev.dependencies]
black = "^24.8.0"
pre-commit = "^3.8.0"
flake8 = "^7.1.1"
isort = "^5.13.2"
pytest = "^8.3.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
